find7: Enable LTE and set radio properties
Change-Id: I328aa5a7b8783b63704c3753a786325cc139314a

--- a/overlay/packages/services/Telephony/res/values/config.xml
+++ b/overlay/packages/services/Telephony/res/values/config.xml
@@ -25,4 +25,6 @@
     <!-- Flag indicating if the tty is enabled -->
     <bool name="tty_enabled">true</bool>
 
+    <bool name="config_enabled_lte">true</bool>
+
 </resources>
