--- a/overlay/packages/apps/Torch/res/values/config.xml
+++ b/overlay/packages/apps/Torch/res/values/config.xml
@@ -20,16 +20,8 @@
 <!-- These resources are around just to allow their values to be customized
      for different hardware and product builds. -->
 <resources>
+
     <!-- If there is no sysfs-based control mechanism, enable this -->
-    <bool name="useCameraInterface">false</bool>
+    <bool name="useCameraInterface">true</bool>
 
-    <!-- Full path to the sysfs toggle -->
-    <string name="flashDevice">/sys/class/leds/led:flash_torch/brightness</string>
-
-    <!-- Lowest setting -->
-    <integer name="valueOn">4</integer>
-    <!-- Middle setting -->
-    <integer name="valueHigh">5</integer>
-    <!-- Highest setting, leave -1 if it doesn't exist -->
-    <integer name="valueDeathRay">6</integer>
 </resources>
