find7: Import configpanel
* TODO: create Oppo common repository for shared Oppo functionality.

Change-Id: I3780bec1d2aa54b54d5535ec58ed04c486a7c4ac

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -286,4 +286,12 @@
     <!-- bool value to for enabling motion accelerometer -->
     <bool name="use_motion_accel">true</bool>
 
+    <!-- The list absolute paths of jar/apk files containing the device specific handlers,
+         delimited by File.pathSeparator, which defaults to ":" on Android -->
+    <string name="config_deviceKeyHandlerLib" translatable="false">/system/app/ConfigPanel.apk</string>
+
+    <!-- Full qualified name of the class that implements
+         com.android.internal.os.DeviceKeyHandler interface. -->
+    <string name="config_deviceKeyHandlerClass" translatable="false">com.cyanogenmod.settings.device.KeyHandler</string>
+
 </resources>
