find7: Fix internal storage
 * Internal storage is not emulated
 * Fixup mount options and add vfat emulation options

Change-Id: I777bf37656a56b12e81d6032b52dc551422f3c3e

--- a/overlay/frameworks/base/core/res/res/xml/storage_list.xml
+++ b/overlay/frameworks/base/core/res/res/xml/storage_list.xml
@@ -25,7 +25,7 @@
     <storage android:mountPoint="/storage/sdcard0"
              android:storageDescription="@string/storage_internal"
              android:primary="true"
-             android:emulated="true"
+             android:emulated="false"
              android:mtpReserve="100" />
 
     <!-- external SD card -->
