Torch: specify multiple sysfs paths
this enables the sysfs way for the find7a

Change-Id: I28b21c44f9a5c1d922525da53a89310777947588

--- a/overlay/packages/apps/Torch/res/values/config.xml
+++ b/overlay/packages/apps/Torch/res/values/config.xml
@@ -23,4 +23,8 @@
     <bool name="useCameraInterface">false</bool>
     <string name="flashDevice">/sys/class/leds/torch-light/brightness</string>
     <integer name="valueOn">1</integer>
+    <string-array name="flashDevices">
+        <item>/sys/class/leds/flashlight/brightness</item>
+        <item>/sys/devices/qcom,camera-led-flash.81/test</item>
+    </string-array>
 </resources>
