find7: Disable multi-color LED settings
Change-Id: I2e588714681cd1730eb6711ce0ac22fa1d0b2ec2

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -118,6 +118,9 @@
         <item>1036</item>
     </integer-array>
 
+    <!-- Does the notification LED support multiple colors? Used to decide if the user can change the colors -->
+    <bool name="config_multiColorNotificationLed">false</bool>
+
     <!-- Default color for notification LED is blue. -->
     <color name="config_defaultNotificationColor">#ff0000ff</color>
 
