hey ho evisceration
Change-Id: Ifdb28f54505dd9b97f73ecbca1ad897021c01087

--- a/overlay/packages/apps/Settings/res/values/custom_config.xml
+++ b/overlay/packages/apps/Settings/res/values/custom_config.xml
@@ -18,6 +18,7 @@
 
     <string-array name="maintainers" translatable="false">
         <item>jumoog</item>
+        <item>evisceration</item>
     </string-array>
 
 </resources>
