--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -152,4 +152,13 @@
     <integer-array name="config_keyboardTapVibePattern">
         <item>25</item>
     </integer-array>
+
+    <!-- Screen brightness when dozing -->
+    <integer name="config_screenBrightnessDoze">5</integer>
+
+    <!-- Dream of notifications -->
+    <string name="config_dozeComponent">com.android.systemui/com.android.systemui.doze.DozeService</string>
+    <bool name="config_dozeAfterScreenOff">true</bool>
+    <bool name="config_powerDecoupleInteractiveModeFromDisplay">true</bool>
+
 </resources>
