DeviceExtra: enable color enhancement by default
Change-Id: If7e41305b9a235057e05bf243052bf444f910426
Signed-off-by: Alexander Martinz <eviscerationls@gmail.com>

--- a/deviceextra/res/xml/device_settings.xml
+++ b/deviceextra/res/xml/device_settings.xml
@@ -20,6 +20,7 @@
         android:key="color_enhancement"
         android:title="@string/color_enhancement"
         android:summary="@string/color_enhancement_summary"
+        android:defaultValue="true"
         android:persistent="true" />
 
 </PreferenceScreen>
