deviceextra: display panel type
  * extract panel type from cmdline and set it as property ro.oppo.panel

Change-Id: Ia26a2281e2af92515a8438b8ffc00889e667c40e
Signed-off-by: Alexander Martinz <eviscerationls@gmail.com>

--- a/deviceextra/res/xml/device_settings.xml
+++ b/deviceextra/res/xml/device_settings.xml
@@ -40,6 +40,11 @@
             tools:summary="@string/storage_layout_unified" />
 
         <Preference
+            android:key="info_panel_type"
+            android:title="@string/panel_type"
+            tools:summary="dsi_jdi_1440p_video" />
+
+        <Preference
             android:key="info_pcb_version"
             android:title="@string/pcb_version"
             tools:summary="22" />
