deviceextra: add reset on suspend toggle
Change-Id: Ia5f59e86b9ca052961e18b10d0e5028a472fa809
Signed-off-by: Alexander Martinz <eviscerationls@gmail.com>

--- a/deviceextra/res/xml/device_settings.xml
+++ b/deviceextra/res/xml/device_settings.xml
@@ -25,6 +25,13 @@
         android:summary="@string/color_enhancement_summary"
         android:title="@string/color_enhancement" />
 
+    <SwitchPreference
+        android:defaultValue="false"
+        android:key="reset_on_suspend"
+        android:persistent="true"
+        android:summary="@string/reset_on_suspend_summary"
+        android:title="@string/reset_on_suspend" />
+
     <PreferenceCategory
         android:key="cat_info"
         android:title="@string/information">
